Fix bug with overflow on trail canvas

--- a/src/components/common/dividers/helixDivider.css
+++ b/src/components/common/dividers/helixDivider.css
@@ -34,7 +34,6 @@
   z-index: 2;
   opacity: 1;
   transition: opacity 0.3s cubic-bezier(0.33, 1, 0.68, 1);
-  overflow-x: visible;
 }
 
 .earth, .moon {
